# BackseatSafeSystem2k

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
roms/: counter.backseat  game_of_life.backseat  hello_world.backseat
src/: address_constants.rs  cursor.rs  debugger.rs  display.rs  dumper.rs  keyboard.rs  machine.rs  main.rs  memory.rs  opcodes.rs  periphery.rs  processor.rs  terminal.rs  timer.rs
src/debugger/: segmented_reader.rs  tcp_protocol.rs
vhdl/: .gitignore  README.mdwn  cpu.vhdl  sim.sh  tb_cpu.vhdl
