[package]
name = "backseat_safe_system_2k"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raylib = { version = "3.7", git = "https://github.com/deltaphc/raylib-rs" }
bitflags = "1.3"
num-format = "0.4.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
strum = "0.24"
strum_macros = "0.24"